--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>贪吃蛇</title>
 </head>
 <body>
-  
+  <div class="main">
+    <div class="stage">
+      <div class="snake">
+        <div class="head"></div>
+        <div class="body"></div>
+      </div>
+      <div id="food">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+    <div class="score-panel">
+      <div>SCORE:<span>0</span></div>
+      <div>level:<span>1</span></div>
+    </div>
+  </div>
 </body>
 </html>
