完成蛇类和计分板类

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
   <title>贪吃蛇</title>
 </head>
 <body>
-  <div class="main">
-    <div class="stage">
-      <div class="snake">
-        <div class="head"></div>
-        <div class="body"></div>
+  <div id="main">
+    <div id="stage">
+      <div id="snake">
+        <div></div>
       </div>
       <div id="food">
         <div></div>
@@ -20,9 +19,9 @@
         <div></div>
       </div>
     </div>
-    <div class="score-panel">
-      <div>SCORE:<span>0</span></div>
-      <div>level:<span>1</span></div>
+    <div id="score-panel">
+      <div>SCORE:<span id="score">0</span></div>
+      <div>level:<span id="level">1</span></div>
     </div>
   </div>
 </body>
